[package]
name = "logtraid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = {version = "0.11.3", features = ["unstable-kv"] }
futures = "0.3.21"
log = { version = "0.4.21", features = ["kv", "kv_sval"] }
logid = { version = "0.12.2", features = ["log_traces"] }
minitrace = { version = "0.6.4", features = ["enable"] }
rand = "0.8.5"
snafu = "0.8.2"
sval = "2.11.1"
sval_derive = "2.11.1"
thiserror = "1.0.58"
tokio = { version = "1.20.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
